Backend with updated api spec running
